--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ document/Kubernetes.fdb_latexmk
 document/Kubernetes.fls
 document/Kubernetes.log
 document/Kubernetes.synctex.gz
+simulation/test.py
+simulation/test.json
 *secret.yaml
