Refactor Kubernetes deployment and add MongoDB configuration
- Update fleet-sim-deployment.yaml to use a specific version of the fleet_sim image
- Add environment variables for RabbitMQ and MongoDB to fleet-sim-deployment.yaml
- Create mongodb-config.yaml to define the MongoDB configuration
- Create mongodb-deployment.yaml, mongodb-pv.yaml, mongodb-pvc.yaml, and mongodb-service.yaml for MongoDB deployment
- Update create_messages.py to use the correct config.json file path
- Update Dockerfile to copy the rest of the application code
- Add config.json file for simulation configuration
- Update fleet_model.py to use environment variables for MongoDB connection
- Remove testarea.py file

--- a/kubernetes/fleet_sim/fleet-sim-deployment.yaml
+++ b/kubernetes/fleet_sim/fleet-sim-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: fleet-sim
-        image: patrickmeyer/fleet_sim:latest
+        image: patrickmeyer/fleet_sim:0.1
         env:
         - name: RABBITMQ_DEFAULT_USER
           valueFrom:
@@ -28,3 +28,33 @@ spec:
             secretKeyRef:
               name: rabbitmq-secret
               key: RABBITMQ_DEFAULT_PASS
+        - name: RABBITMQ_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: rabbitmq-config
+              key: RABBITMQ_HOST
+        - name: RABBITMQ_PORT 
+          valueFrom:
+            configMapKeyRef:
+              name: rabbitmq-config
+              key: RABBITMQ_PORT
+        - name: MONGO_INITDB_ROOT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: MONGO_INITDB_ROOT_USERNAME
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: MONGO_INITDB_ROOT_PASSWORD
+        - name: MONGODB_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: mongodb-config
+              key: MONGODB_HOST
+        - name: MONGODB_PORT 
+          valueFrom:
+            configMapKeyRef:
+              name: mongodb-config
+              key: MONGODB_PORT
