--- a/kubernetes/db/db-config.yaml
+++ b/kubernetes/db/db-config.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: db-config
+  name: postgres-config
   namespace: default
 data:
-  POSTGRES_HOST: "db-service.default.svc.cluster.local"
+  POSTGRES_HOST: "postgres-service.default.svc.cluster.local"
   POSTGRES_PORT: "5432"
