--- a/kubernetes/frontend/Dockerfile
+++ b/kubernetes/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the Angular application
-FROM node:14 AS build
+FROM node:20-alpine AS build
 
 WORKDIR /app
 
@@ -12,7 +12,8 @@ RUN npm run build --prod
 # Stage 2: Serve the Angular application with Nginx
 FROM nginx:alpine
 
-COPY --from=build /app/dist/your-angular-app /usr/share/nginx/html
+COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
