--- a/kubernetes/fleet_sim/fleet-sim-deployment.yaml
+++ b/kubernetes/fleet_sim/fleet-sim-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: fleet-sim
-        image: patrickmeyer/fleet_sim:latest
+        image: patrickmeyer/fleet_sim:0.3
         imagePullPolicy: Always
         env:
         - name: RABBITMQ_DEFAULT_USER
@@ -39,23 +39,3 @@ spec:
             configMapKeyRef:
               name: rabbitmq-config
               key: RABBITMQ_PORT
-        - name: MONGO_INITDB_ROOT_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: mongodb-secret
-              key: MONGO_INITDB_ROOT_USERNAME
-        - name: MONGO_INITDB_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mongodb-secret
-              key: MONGO_INITDB_ROOT_PASSWORD
-        - name: MONGODB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: mongodb-config
-              key: MONGODB_HOST
-        - name: MONGODB_PORT 
-          valueFrom:
-            configMapKeyRef:
-              name: mongodb-config
-              key: MONGODB_PORT
