--- a/kubernetes/rabbitmq/rabbitmq-deployment.yaml
+++ b/kubernetes/rabbitmq/rabbitmq-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
       - name: rabbitmq
         image: rabbitmq:3-management
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
         env:
         - name: RABBITMQ_DEFAULT_USER
           valueFrom:
