--- a/kubernetes/rabbitmq/rabbitmq-service.yaml
+++ b/kubernetes/rabbitmq/rabbitmq-service.yaml
@@ -5,15 +5,15 @@ metadata:
   labels:
     app: rabbitmq
 spec:
-  ports:
-    - port: 5672
-      targetPort: 5672
-      protocol: TCP
-      name: amqp
-    - port: 15672
-      targetPort: 15672
-      protocol: TCP
-      name: management
   selector:
     app: rabbitmq
-  type: ClusterIP
+  ports:
+    - protocol: TCP
+      name: gui
+      port: 15672
+      targetPort: 15672
+    - protocol: TCP
+      name: api
+      port: 5672
+      targetPort: 5672
+  type: NodePort
