--- a/kubernetes/mongdb/mongodb-deployment.yaml
+++ b/kubernetes/mongdb/mongodb-deployment.yaml
@@ -19,6 +19,13 @@ spec:
         image: mongo:latest
         ports:
         - containerPort: 27017
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
