--- a/kubernetes/fleet-sim-ingress.yaml
+++ b/kubernetes/fleet-sim-ingress.yaml
@@ -2,10 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fleet-sim-ingress
-  annotations:
-    kubernetes.io/ingress.class: "gce" # Use GCE Ingress controller
-    kubernetes.io/ingress.global-static-ip-name: "fleet-sim-ip"
 spec:
+  ingressClassName: nginx
   rules:
     - host: rmq.quantumshoe.duckdns.org
       http:
