--- a/kubernetes/fleet_sim/fleet-sim-deployment.yaml
+++ b/kubernetes/fleet_sim/fleet-sim-deployment.yaml
@@ -16,8 +16,14 @@ spec:
     spec:
       containers:
       - name: fleet-sim
-        image: patrickmeyer/fleet_sim:0.3
-        imagePullPolicy: Always
+        image: patrickmeyer/fleet-sim:1.0
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
         env:
         - name: RABBITMQ_DEFAULT_USER
           valueFrom:
@@ -33,9 +39,19 @@ spec:
           valueFrom:
             configMapKeyRef:
               name: rabbitmq-config
-              key: RABBITMQ_HOST
+              key: RABBITMQ_HOST_INTERNAL
         - name: RABBITMQ_PORT 
           valueFrom:
             configMapKeyRef:
               name: rabbitmq-config
               key: RABBITMQ_PORT
+        - name: FASTAPI_HOST 
+          valueFrom:
+            configMapKeyRef:
+              name: fastapi-config
+              key: FASTAPI_HOST
+        - name: FASTAPI_PORT 
+          valueFrom:
+            configMapKeyRef:
+              name: fastapi-config
+              key: FASTAPI_PORT
