changed to NodePort, moved rmq connection init, and removed health check

--- a/kubernetes/fastapi/fastapi-config.yaml
+++ b/kubernetes/fastapi/fastapi-config.yaml
@@ -4,5 +4,5 @@ metadata:
   name: fastapi-config
   namespace: default
 data:
-  FASTAPI_HOST: "fastapi-service.default.svc.cluster.local"
+  FASTAPI_HOST: "fastapi-service"
   FASTAPI_PORT: "8000"
